--- a/src/app/home/play-music-page/play-music-page.component.html
+++ b/src/app/home/play-music-page/play-music-page.component.html
@@ -21,7 +21,7 @@
         </ion-toolbar>
     </ion-header>
     <ion-card class="card">
-        <img class="img" src="https://cdn2.clc2l.fr/t/a/p/apple-music-tNKCFp.jpg" />
+        <img class="img" [src]="musique.idImageStorage" />
         <ion-card-header>
             <ion-card-title>{{musique.nom}}</ion-card-title>
             <ion-card-subtitle>{{musique.idAuteur}}</ion-card-subtitle>
