--- a/src/app/home/play-music-page/play-music-page.component.scss
+++ b/src/app/home/play-music-page/play-music-page.component.scss
@@ -33,8 +33,10 @@
 }
 
 .img {
-    margin-top: 30px;
-    width: 70%;
+    margin-top: 20%;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .range {
