--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,7 +23,7 @@
                 Playlists
             </ion-label>
         </ion-item>
-        <ion-item detail class="item">
+        <ion-item detail class="item" [routerLink]="['artists']">
             <ion-label>
                 Artists
             </ion-label>
