--- a/src/app/home/queue/queue.component.html
+++ b/src/app/home/queue/queue.component.html
@@ -28,7 +28,7 @@
         <ion-item-sliding detail="false" *ngFor="let music of Queue; let i = index">
             <ion-item class="music" detail="false" [routerLink]="['music/'+music.id]" (click)="playMusique(music)">
                 <ion-avatar slot="start">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRspsZ1EU8IH4m29uCG9eQ6UrrdtfwF8uFtN_nzxOPoj-YHbvv9X80_GApgrWKupB0UdL0&usqp=CAU">
+                    <img src="music.idImageStorage">
                 </ion-avatar>
                 <ion-label>
                     <h2>{{ music.nom }}</h2>
