--- a/src/app/home/artists/artists.component.html
+++ b/src/app/home/artists/artists.component.html
@@ -22,10 +22,10 @@
         <ion-list>
             <ion-item detail="false" *ngFor="let artist of artists">
                 <ion-item class="music" detail="false" [routerLink]="[artist.id]">
-                    <ion-avatar slot="start">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRspsZ1EU8IH4m29uCG9eQ6UrrdtfwF8uFtN_nzxOPoj-YHbvv9X80_GApgrWKupB0UdL0&usqp=CAU">
-                    </ion-avatar>
-                    <ion-label>
+                    <ion-fab-button color="light" size="small">
+                        <ion-label>{{ artist.NbMusique }}</ion-label>
+                    </ion-fab-button>
+                    <ion-label class="artist">
                         <h2>{{ artist.nom }}</h2>
                     </ion-label>
                 </ion-item>
