--- a/src/app/home/morceaux/morceaux.component.html
+++ b/src/app/home/morceaux/morceaux.component.html
@@ -22,16 +22,14 @@
         <ion-searchbar #search showClearButton animated (ionChange)="_ionChange($event)"></ion-searchbar>
         <ion-list>
             <ion-item detail="false" *ngFor="let music of searchedItem">
-                <ion-item detail="false" *ngIf="user$ | async as user">
-                    <ion-item class="music" detail="false" [routerLink]="['music/'+music.id]" (click)="playMusique(music)">
-                        <ion-avatar slot="start">
-                            <img [src]="music.idImageStorage">
-                        </ion-avatar>
-                        <ion-label>
-                            <h2>{{ music.nom }}</h2>
-                            <p>{{ music.idAuteur }}</p>
-                        </ion-label>
-                    </ion-item>
+                <ion-item *ngIf="user$ | async as user" class="music" detail="false" [routerLink]="['music/'+music.id]" (click)="playMusique(music)">
+                    <ion-avatar slot="start">
+                        <img [src]="music.idImageStorage">
+                    </ion-avatar>
+                    <ion-label>
+                        <h2>{{ music.nom }}</h2>
+                        <p>{{ music.idAuteur }}</p>
+                    </ion-label>
                     <ion-icon *ngIf="user.email === music.idUserContributor" slot="end" name="person-circle"></ion-icon>
                 </ion-item>
                 <ion-icon slot="end" name="ellipsis-vertical" (click)="openPopover($event,music)"></ion-icon>
