--- a/src/app/home/queue/queue.component.html
+++ b/src/app/home/queue/queue.component.html
@@ -28,7 +28,7 @@
         <ion-item-sliding detail="false" *ngFor="let music of Queue; let i = index">
             <ion-item class="music" detail="false" [routerLink]="['music/'+music.id]" (click)="playMusique(music)">
                 <ion-avatar slot="start">
-                    <img src="music.idImageStorage">
+                    <img [src]="music.idImageStorage">
                 </ion-avatar>
                 <ion-label>
                     <h2>{{ music.nom }}</h2>
