--- a/src/app/popovers/music-popover/music-popover.component.html
+++ b/src/app/popovers/music-popover/music-popover.component.html
@@ -1,5 +1,5 @@
 <ion-list>
-    <ion-item button *ngIf="!inPlaylist" (click)="openPlaylistPopover($event)">Add to playlist</ion-item>
+    <ion-item button (click)="openPlaylistPopover($event)">Add to playlist</ion-item>
     <ion-item button detail="false" *ngIf="inPlaylist" (click)="deleteFromPlaylist()">Delete from playlist</ion-item>
     <ion-item button detail="false" (click)="addToQueue()">Add to queue</ion-item>
 </ion-list>
