--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -16,7 +16,7 @@
             </ion-col>
             <ion-col size="1" class="ion-text-center ion-no-padding ion-align-self-center">
                 <ion-buttons>
-                    <ion-icon (click)="playPause()" name="play-back" size="large"></ion-icon>
+                    <ion-icon (click)="previous()" name="play-back" size="large"></ion-icon>
                 </ion-buttons>
             </ion-col>
             <ion-col size="1" class="ion-text-center ion-no-padding ion-align-self-center">
@@ -26,7 +26,7 @@
             </ion-col>
             <ion-col size="1" class="ion-text-center ion-no-padding ion-align-self-center">
                 <ion-buttons>
-                    <ion-icon (click)="playPause()" name="play-forward" size="large"></ion-icon>
+                    <ion-icon (click)="next()" name="play-forward" size="large"></ion-icon>
                 </ion-buttons>
             </ion-col>
         </ion-row>
