--- a/src/app/home/queue/queue.component.html
+++ b/src/app/home/queue/queue.component.html
@@ -26,7 +26,7 @@
     </ion-button>
     <ion-list>
         <ion-item-sliding detail="false" *ngFor="let music of Queue; let i = index">
-            <ion-item *ngIf="i == indiceCurrentMusique " color="light" class="music" detail="false" [routerLink]="['music/'+music.id]" (click)="playMusique(music)">
+            <ion-item *ngIf="i == indiceCurrentMusique " color="light" class="music" detail="false" [routerLink]="['music/'+music.id]" (click)="playMusique(i)">
                 <ion-avatar slot="start">
                     <img [src]="music.idImageStorage">
                 </ion-avatar>
@@ -36,7 +36,7 @@
                 </ion-label>
                 <ion-spinner name="dots" slot="end"></ion-spinner>
             </ion-item>
-            <ion-item *ngIf="i != indiceCurrentMusique " class="music" detail="false" [routerLink]="['music/'+music.id]" (click)="playMusique(music)">
+            <ion-item *ngIf="i != indiceCurrentMusique " class="music" detail="false" (click)="playMusique(i)">
                 <ion-avatar slot="start">
                     <img [src]="music.idImageStorage">
                 </ion-avatar>
