deconnection boutons login google github twitter

--- a/src/app/login/signin-page/signin-page.component.html
+++ b/src/app/login/signin-page/signin-page.component.html
@@ -25,15 +25,15 @@
         <ion-row>
             <div class="connect-with">Connect with :</div>
             <ion-col class="extras">
-                <ion-button color="danger" (click)="connectwithgoogle()">
+                <ion-button color="danger" (click)="connectwithgoogle()" disabled>
                     <ion-icon slot="start" name="logo-google"></ion-icon>
                     Google
                 </ion-button>
-                <ion-button color="primary" (click)="connectwithtwitter()">
+                <ion-button color="primary" (click)="connectwithtwitter()" disabled>
                     <ion-icon slot="start" name="logo-twitter"></ion-icon>
                     Twitter
                 </ion-button>
-                <ion-button color="dark" (click)="connectwithgithub()">
+                <ion-button color="dark" (click)="connectwithgithub()" disabled>
                     <ion-icon slot="start" name="logo-github"></ion-icon>
                     Github
                 </ion-button>
