fix pour la version prod et supprison des .log

--- a/src/app/modals/add-musique/add-musique.component.html
+++ b/src/app/modals/add-musique/add-musique.component.html
@@ -5,7 +5,7 @@
         </ion-card-header>
 
         <ion-button color="danger" expand="block">
-            <input type="file" class="upload" (change)="fileUpload($event.target.files)" accept=".mp3, .wav" />
+            <input type="file" class="upload" (change)="fileUpload($event)" accept=".mp3, .wav" />
         </ion-button>
     </ion-card>
 
